Wed Jun 19 20:51:21 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* gc.c (gc_stress_get): GC.stress can be Fixnum.

Wed Jun 19 19:31:30 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (DIGSPERLONG): Don't define if BDIGIT is bigger than long.
	  (DIGSPERLL): Don't define if BDIGIT is bigger than LONG_LONG
	  (rb_absint_size): Consider environments BDIGIT is bigger than long.
	  Use BIGLO and BIGDN.
	  (rb_absint_singlebit_p): Ditto.
	  (rb_integer_pack): Ditto.
	  (bigsub_int): Consider environments BDIGIT is bigger than long.
	  Use SIZEOF_BDIGITS instead of sizeof(BDIGIT).
	  (bigadd_int): Ditto.
	  (bigand_int): Ditto.
	  (bigor_int): Ditto.
	  (bigxor_int): Ditto.

Wed Jun 19 15:14:30 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h (struct rb_data_type_struct), gc.c: add
	  rb_data_type_struct::flags. Now, this flags is passed
	  at T_DATA object creation. You can specify FL_WB_PROTECTED
	  on this flag.

	* iseq.c: making non-shady iseq objects.

	* class.c, compile.c, proc.c, vm.c: add WB for iseq objects.

	* vm_core.h, iseq.h: constify fields to detect WB insertion.

Wed Jun 19 15:11:13 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (gc_mark_children): show more info for broken object.

Wed Jun 19 14:04:41 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/ruby/envutil.rb (EnvUtil#rubybin): remove unnecessary
	  unless expression.

Wed Jun 19 07:47:48 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (garbage_collect_body): use FIX2INT for ruby_gc_stress.

Wed Jun 19 07:44:31 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace::gc_stress): int -> VALUE to store Fixnum object.

Wed Jun 19 07:25:35 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (make_deferred): clear flags to T_ZOMBIE.

	* gc.c (slot_sweep_body): fix indent.

Wed Jun 19 07:18:47 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_aref): Apply BIGLO to ~xds[i] for environment which
	  BDIGIT is 16bit.

Wed Jun 19 07:09:26 2013  Koichi Sasada  <ko1@atdot.net>
